# app/api/user/route.ts
@@ -1,8 +1,13 @@
+import { createSession } from "@/lib/session";
 import {
   CreateUserBody,
   LoginResponse,
 } from "@/src/api/endpoints/user/user.zod";
-import { BadRequestResponse, ExistsResponse } from "@/src/api/models";
+import {
+  BadRequestResponse,
+  ExistsResponse,
+  UnexpectedResponse,
+} from "@/src/api/models";
 import { User, users } from "@/src/sample";
 import { NextRequest, NextResponse } from "next/server";
 import { pino } from "pino";
@@ -12,9 +17,9 @@ const CreateUserResponse = LoginResponse;
 
 const logger = pino().child({ operation: "create user" });
 
-export function POST(request: NextRequest) {
+export async function POST(request: NextRequest) {
   try {
-    const body = CreateUserBody.parse(request.body);
+    const body = CreateUserBody.parse(await request.json());
 
     if (users.some(({ email }) => email === body.email)) {
       logger.info("User already exists.");
@@ -32,17 +37,29 @@ export function POST(request: NextRequest) {
     };
 
     users.push(user);
+    await createSession(user.id);
     logger.info("Success");
 
     return NextResponse.json(CreateUserResponse.parse(user.id), {
       status: 201,
     });
   } catch (e) {
-    if (e instanceof ZodError) logger.info({ issues: e.issues });
+    if (e instanceof ZodError) {
+      logger.info({ issues: e.issues });
+
+      return NextResponse.json(
+        { message: "Bad request." } as BadRequestResponse,
+        { status: 400 },
+      );
+    }
+
+    logger.info(e);
 
     return NextResponse.json(
-      { message: "Bad request." } as BadRequestResponse,
-      { status: 400 },
+      {
+        message: "Unexpected error.",
+      } as UnexpectedResponse,
+      { status: 500 },
     );
   }
 }
